相关插件以及优化

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!--导航栏-->
-    <nav class="ui my-menu-transparent inverted attached segment padded-tb-mini shadow-small">
+    <nav class="ui my-menu-transparent inverted attached segment padded-tb-mini shadow-small animate__animated animate__fadeInDown">
         <div class="ui container">
             <div class="ui transparent inverted menu secondary stackable padded-tb-small">
                 <h2 class="ui teal header item">blog</h2>
@@ -36,7 +36,7 @@
     </nav><!--TODO-->
 
     <!--中间内容-->
-    <div class="my-container padded-tb-huge">
+    <div class="my-container padded-tb-huge animate__animated animate__fadeIn">
         <div class="ui container">
                 <div class="ui stackable grid">
                     <!--左边文章列表部分-->
